--- a/src/Layouts/components/Navbar/Navbar.module.scss
+++ b/src/Layouts/components/Navbar/Navbar.module.scss
@@ -8,7 +8,7 @@
   h1 {
     font-size: 14px;
     font-weight: 800;
-    color: #a8afb9;
+    color: var(--primary-color);
     padding-left: 12px;
     margin: 24px 0;
     text-transform: uppercase;
