--- a/src/Layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/src/Layouts/DefaultLayout/DefaultLayout.module.scss
@@ -39,6 +39,7 @@
       transform: translateX(0);
       transition: transform 0.4s linear;
       background-color: #fafafa;
+      z-index: 999;
 
       @include media-breakpoint-down(lg) {
         transform: translateX(-100%);
@@ -64,6 +65,7 @@
       width: 100%;
       height: 100vh;
       transition: margin-left 0.4s linear;
+      z-index: 0;
 
       @include media-breakpoint-down(lg) {
         margin-left: 0;
