--- a/src/pages/Dashboard/Dashboard.module.scss
+++ b/src/pages/Dashboard/Dashboard.module.scss
@@ -29,15 +29,6 @@
     }
   }
 
-  &__date {
-    margin-bottom: 40px;
-
-    &-weekday {
-      color: var(--primary-bg);
-      font-weight: 500;
-    }
-  }
-
   &--pape {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
@@ -58,7 +49,8 @@
       background-color: #fff;
       display: flex;
       padding: 30px 24px;
-      border-radius: 16px;
+      border-radius: 6px;
+      border-left: 4px solid var(--dashboard-border);
 
       @include media-breakpoint-down(lg) {
         grid-column: span 1;
