--- a/src/Layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/src/Layouts/DefaultLayout/DefaultLayout.module.scss
@@ -61,24 +61,24 @@
     }
 
     &-right {
-      margin-left: 240px;
+      padding-left: 240px;
       width: 100%;
       height: 100vh;
-      transition: margin-left 0.4s linear;
+      transition: padding-left 0.4s linear;
       z-index: 0;
 
       @include media-breakpoint-down(lg) {
-        margin-left: 0;
+        padding-left: 0;
       }
       @include media-breakpoint-down(md) {
-        margin-left: 0;
+        padding-left: 0;
       }
       @include media-breakpoint-down(sm) {
-        margin-left: 0;
+        padding-left: 0;
       }
 
       &-full {
-        margin-left: 0;
+        padding-left: 0;
       }
     }
   }
