--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -174,3 +174,15 @@
     transform: translate(2px, -3px);
   }
 }
+
+.addUser {
+  padding: 8px;
+  min-width: 180px;
+  font-size: 1.5rem;
+  font-weight: 600;
+
+  .icon {
+    filter: brightness(0) saturate(100%) invert(96%) sepia(98%) saturate(4241%) hue-rotate(187deg) brightness(127%)
+      contrast(102%);
+  }
+}
