--- a/src/Layouts/components/Header/Header.module.scss
+++ b/src/Layouts/components/Header/Header.module.scss
@@ -7,6 +7,13 @@
   width: 100%;
   justify-content: space-between;
   align-items: center;
+  position: relative;
+
+  .toast-container {
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
 }
 
 .button-menu {
@@ -22,6 +29,7 @@
     align-items: center;
     justify-content: center;
     margin-right: 10px;
+    transition: 0.3s linear;
 
     .menu-icon {
       width: 12px;
@@ -68,6 +76,7 @@
     width: 44px;
     height: 44px;
     border-radius: 100rem;
+    transition: 0.3s linear;
 
     @include media-breakpoint-down(md) {
       width: 32px;
@@ -112,6 +121,13 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+      border-radius: 100rem;
+      border: 2px solid rgba(159, 159, 159, 0.4);
+      transition: 0.3s linear;
+    }
+
+    img:hover {
+      border: 2px solid #d8f0df;
     }
   }
 }
@@ -227,6 +243,7 @@
           width: 100%;
           height: 100%;
           object-fit: cover;
+          border-radius: 100rem;
         }
       }
 
@@ -252,6 +269,7 @@
       font-size: 14px;
       display: flex;
       align-items: center;
+      transition: 0.2s linear;
     }
 
     .account:hover,
