Update the user editing modal interface✅

--- a/src/components/GlobalStyles/Form.scss
+++ b/src/components/GlobalStyles/Form.scss
@@ -196,6 +196,7 @@
     font-size: 1.8rem;
     font-weight: 500;
     line-height: 145.455%;
+    user-select: none;
 
     &--lg {
       margin-bottom: 10px;
