--- a/src/pages/Users/User.module.scss
+++ b/src/pages/Users/User.module.scss
@@ -23,6 +23,112 @@
   }
 }
 
+.button-group {
+  position: absolute;
+  right: 50px;
+  width: 56px;
+  margin-top: 16px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fff;
+  z-index: 999;
+
+  @include media-breakpoint-down(lg) {
+    right: 36px;
+  }
+
+  @include media-breakpoint-down(md) {
+    right: 10px;
+  }
+
+  @include media-breakpoint-down(sm) {
+    width: 20px;
+    right: 40px;
+    // overflow-x: hidden;
+  }
+
+  button {
+    background-color: red;
+  }
+}
+
+.skeleton {
+  &-avatar {
+    width: 40px;
+    height: 40px;
+    border-radius: 100rem;
+    background-color: rgba(229, 229, 229, 0.605);
+    position: relative;
+    display: flex;
+    // justify-content: start;
+  }
+  &-name,
+  &-phone,
+  &-dateOfBirth,
+  &-lastActive {
+    width: 120px;
+    height: 40px;
+    border-radius: 4px;
+    background-color: rgba(229, 229, 229, 0.605);
+    position: relative;
+  }
+
+  &-email {
+    width: 280px;
+    height: 40px;
+    border-radius: 4px;
+    background-color: rgba(229, 229, 229, 0.605);
+    position: relative;
+  }
+
+  &-gender,
+  &-role {
+    width: 80px;
+    height: 40px;
+    border-radius: 100rem;
+    background-color: rgba(229, 229, 229, 0.605);
+    position: relative;
+  }
+
+  &-isVerify,
+  &-isLocked {
+    width: 30px;
+    height: 30px;
+    border-radius: 4px;
+    background-color: rgba(229, 229, 229, 0.605);
+    position: relative;
+  }
+
+  &-avatar:before,
+  &-name:before,
+  &-email:before,
+  &-phone:before,
+  &-dateOfBirth:before,
+  &-gender:before,
+  &-isVerify:before,
+  &-isLocked:before,
+  &-role:before,
+  &-lastActive:before {
+    content: '';
+    height: 100%;
+    width: 100%;
+    // border-radius: 100rem;
+    animation: slide 0.4s infinite;
+    position: absolute;
+    top: 0;
+    left: -100%;
+    background: linear-gradient(45deg, rgba(229, 229, 229, 0), rgba(255, 255, 255, 0.6), rgba(229, 229, 229, 0));
+    animation: shimmer 1s linear infinite;
+  }
+
+  @keyframes shimmer {
+    100% {
+      left: 100%;
+    }
+  }
+}
+
 :global {
   .toolbar {
     position: relative;
