--- a/src/pages/Dashboard/Dashboard.module.scss
+++ b/src/pages/Dashboard/Dashboard.module.scss
@@ -269,7 +269,8 @@
       display: flex;
       flex-direction: column;
       align-items: stretch;
-
+      grid-template-columns: repeat(12, 1fr);
+      gap: 20px;
       @include media-breakpoint-down(lg) {
         display: flex;
         grid-column: span 2;
@@ -289,12 +290,13 @@
       }
 
       .dashboard-recent-order {
-        height: auto;
-        width: 100%;
+        // height: 200px;
+        // width: 100%;
         padding: 16px;
         border-radius: 12px;
         background-color: #fff;
-        margin-bottom: 24px;
+        // margin-bottom: 24px;
+        grid-row: span 4;
 
         @include media-breakpoint-down(lg) {
           grid-column: span 1;
@@ -322,11 +324,12 @@
       }
 
       .dashboard-active-user {
-        height: auto;
+        // height: auto;
         width: 100%;
         padding: 16px;
         border-radius: 12px;
         background-color: #fff;
+        grid-row: span 4;
 
         @include media-breakpoint-down(lg) {
           grid-column: span 1;
