--- a/src/pages/Dashboard/Dashboard.module.scss
+++ b/src/pages/Dashboard/Dashboard.module.scss
@@ -243,6 +243,7 @@
       flex-direction: column;
       justify-content: space-between;
       align-items: stretch;
+      flex-grow: 1;
 
       &-header {
         h5 {
@@ -267,10 +268,12 @@
     .dashboard-group {
       grid-column: span 3;
       display: flex;
+      height: auto;
       flex-direction: column;
       align-items: stretch;
       grid-template-columns: repeat(12, 1fr);
       gap: 20px;
+      flex-grow: 1;
       @include media-breakpoint-down(lg) {
         display: flex;
         grid-column: span 2;
