--- a/src/pages/Dashboard/Dashboard.module.scss
+++ b/src/pages/Dashboard/Dashboard.module.scss
@@ -228,82 +228,49 @@
       }
     }
 
-    .cal-group {
+    .dashboard-container {
+      grid-column: span 12;
       height: auto;
-    }
-
-    .dashboard-hybrid-chart {
-      grid-column: span 9;
-      width: 100% !important;
-      height: auto;
-      padding: 24px;
-      background-color: #fff;
       border-radius: 12px;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      align-items: stretch;
-      flex-grow: 1;
+      display: grid;
+      grid-template-columns: repeat(12, 1fr);
+      gap: 20px;
 
-      &-header {
+      @include media-breakpoint-down(lg) {
+        grid-column: span 2;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+      }
+
+      @include media-breakpoint-down(md) {
+        grid-column: span 1;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+      }
+
+      @include media-breakpoint-down(sm) {
+        grid-column: span 1;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+      }
+
+      .hybrid-chart {
+        grid-column: span 9;
+        width: 100%;
+        background-color: #fff;
+        padding: 24px;
+        border-radius: 12px;
+        flex-direction: column;
+        justify-content: space-between;
+
         h5 {
           font-size: 1.8rem;
           font-weight: 600;
+          margin-bottom: 15px;
         }
-      }
-
-      @include media-breakpoint-down(lg) {
-        grid-column: span 2;
-      }
-
-      @include media-breakpoint-down(md) {
-        grid-column: span 1;
-      }
-
-      @include media-breakpoint-down(sm) {
-        grid-column: span 1;
-      }
-    }
-
-    .dashboard-group {
-      grid-column: span 3;
-      display: flex;
-      height: auto;
-      flex-direction: column;
-      align-items: stretch;
-      grid-template-columns: repeat(12, 1fr);
-      gap: 20px;
-      flex-grow: 1;
-      @include media-breakpoint-down(lg) {
-        display: flex;
-        grid-column: span 2;
-        gap: 10px;
-      }
-
-      @include media-breakpoint-down(md) {
-        grid-column: span 1;
-        display: flex;
-        flex-direction: column;
-      }
-
-      @include media-breakpoint-down(sm) {
-        grid-column: span 1;
-        display: flex;
-        flex-direction: column;
-      }
-
-      .dashboard-recent-order {
-        // height: 200px;
-        // width: 100%;
-        padding: 16px;
-        border-radius: 12px;
-        background-color: #fff;
-        // margin-bottom: 24px;
-        grid-row: span 4;
 
         @include media-breakpoint-down(lg) {
           grid-column: span 1;
-          margin-bottom: 0;
         }
 
         @include media-breakpoint-down(md) {
@@ -315,25 +282,14 @@
         }
       }
 
-      .dashboard-wrapper {
+      .group-chart-wrapper {
+        grid-column: span 3;
+        border-radius: 12px;
+        width: 100%;
         display: flex;
-        align-items: center;
+        flex-direction: column;
         justify-content: space-between;
 
-        span {
-          font-size: 1.4rem;
-          color: rgb(186, 186, 186);
-        }
-      }
-
-      .dashboard-active-user {
-        // height: auto;
-        width: 100%;
-        padding: 16px;
-        border-radius: 12px;
-        background-color: #fff;
-        grid-row: span 4;
-
         @include media-breakpoint-down(lg) {
           grid-column: span 1;
         }
@@ -344,6 +300,39 @@
 
         @include media-breakpoint-down(sm) {
           grid-column: span 1;
+        }
+
+        .group-chart {
+          background-color: #fff;
+          padding: 16px;
+          border-radius: 12px;
+          margin: 4px 0;
+
+          &-content {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+          }
+
+          @include media-breakpoint-down(lg) {
+            grid-column: span 2;
+          }
+
+          @include media-breakpoint-down(md) {
+            grid-column: span 1;
+          }
+
+          @include media-breakpoint-down(sm) {
+            grid-column: span 1;
+          }
+        }
+
+        .group-chart:first-child {
+          margin-top: 0;
+        }
+
+        .group-chart:last-child {
+          margin-bottom: 0;
         }
       }
     }
