--- a/src/pages/Dashboard/Dashboard.module.scss
+++ b/src/pages/Dashboard/Dashboard.module.scss
@@ -307,7 +307,7 @@
           padding: 16px;
           border-radius: 12px;
           margin: 4px 0;
-
+          flex-grow: 1;
           &-content {
             display: flex;
             justify-content: space-between;
