--- a/src/pages/Orders/Order.module.scss
+++ b/src/pages/Orders/Order.module.scss
@@ -6,7 +6,7 @@
   padding: 32px;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  background-color: #f6f6f6;
+  background-color: #fff;
   gap: 20px;
 
   @include media-breakpoint-down(lg) {
@@ -30,6 +30,8 @@
     height: auto;
     border-radius: 16px;
     overflow: hidden;
+    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.02), 0px 0px 0px 1px rgba(27, 31, 35, 0.15);
+    align-self: start;
 
     @include media-breakpoint-down(lg) {
       grid-column: span 4;
@@ -70,9 +72,14 @@
     }
   }
 
+  .delivering {
+    // border:1px solid
+    box-shadow: 0px 3px 8px rgba(57, 206, 57, 0.24);
+  }
+
   .orders {
     grid-column: span 9;
-    background-color: #fff;
+    background-color: #f6f6f6;
     height: auto;
     border-radius: 16px;
     overflow: hidden;
@@ -151,6 +158,35 @@
           width: 100%;
         }
       }
+    }
+  }
+
+  .empty-orders {
+    width: 100%;
+    height: 350px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #fff;
+    margin-top: 20px;
+    border-radius: 12px;
+
+    .image {
+      width: 100px;
+      height: 100px;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+
+    h3 {
+      font-size: 18px;
+      font-weight: normal;
+      margin-top: 20px;
     }
   }
 }
