--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -24,6 +24,12 @@
     margin-left: 0;
   }
 
+  @include media-breakpoint-down(lg) {
+    &.addUser {
+      margin-left: 0;
+    }
+  }
+
   // Disabled
   &.disabled {
     opacity: 0.4;
@@ -178,11 +184,16 @@
 .addUser {
   padding: 8px;
   min-width: 180px;
+  min-height: 42px;
   font-size: 1.5rem;
   font-weight: 600;
 
   .icon {
     filter: brightness(0) saturate(100%) invert(96%) sepia(98%) saturate(4241%) hue-rotate(187deg) brightness(127%)
       contrast(102%);
+  }
+
+  @include media-breakpoint-down(lg) {
+    width: 100%;
   }
 }
