--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -104,14 +104,17 @@ img {
 
 .overlay {
   position: fixed;
+  inset: 0;
+  visibility: hidden;
   width: 100%;
   height: 200vh;
   opacity: 0;
   background-color: rgba(0, 0, 0, 0.65);
-  z-index: 999;
   transition: opacity 0.5s;
-
+  z-index: 9999;
+  
   &--show {
+    visibility: visible;
     opacity: 0.4;
   }
 }
