--- a/src/pages/Products/Product.module.scss
+++ b/src/pages/Products/Product.module.scss
@@ -61,7 +61,7 @@
       width: 30%;
     }
 
-    @include media-breakpoint-down(lg) {
+    @include media-breakpoint-down(md) {
       width: 50%;
     }
 
