--- a/src/pages/Orders/Order.module.scss
+++ b/src/pages/Orders/Order.module.scss
@@ -83,6 +83,7 @@
     border-radius: 16px;
     overflow: hidden;
     padding: 16px;
+    position: relative;
 
     @include media-breakpoint-down(lg) {
       grid-column: span 4;
@@ -206,6 +207,7 @@
     border-radius: 12px;
     padding: 30px 20px;
     margin: 20px 0;
+    position: relative;
 
     .user-information {
       width: 100%;
@@ -372,32 +374,74 @@
       }
     }
 
-    .btn-active {
-      width: 100%;
+    .group-btn {
+      width: auto;
       display: flex;
-      justify-content: end;
-      align-items: center;
       height: 44px;
-      margin-top: 20px;
 
-      .btn-restore {
+      .btn-cancel {
         height: 100%;
         width: 12vw;
         border-radius: 8px;
         font-size: 16px;
-        background-color: #00ba51;
+        background-color: #ff0000;
         color: #fff;
         font-weight: 500;
+        margin-right: 8px;
+        text-wrap: nowrap;
 
         @include media-breakpoint-down(lg) {
         }
 
         @include media-breakpoint-down(md) {
           width: 100%;
+          padding: 0 12px;
         }
 
         @include media-breakpoint-down(sm) {
           width: 100%;
+          padding: 0 12px;
+        }
+
+        &-change-width {
+          margin-top: 20px;
+        }
+      }
+      .btn-cancel:hover {
+        cursor: pointer;
+        opacity: 0.8;
+      }
+    }
+
+    .btn-active {
+      width: 100%;
+      display: flex;
+      justify-content: end;
+      align-items: center;
+      height: auto;
+      margin-top: 20px;
+
+      .btn-restore {
+        height: 44px;
+        width: 12vw;
+        border-radius: 8px;
+        font-size: 16px;
+        background-color: #00ba51;
+        color: #fff;
+        font-weight: 500;
+        text-wrap: nowrap;
+
+        @include media-breakpoint-down(lg) {
+        }
+
+        @include media-breakpoint-down(md) {
+          width: 100%;
+          padding: 0 12px;
+        }
+
+        @include media-breakpoint-down(sm) {
+          width: 100%;
+          padding: 0 12px;
         }
 
         &-change-width {
@@ -408,6 +452,97 @@
       .btn-restore:hover {
         cursor: pointer;
         opacity: 0.9;
+      }
+    }
+  }
+}
+
+.skeleton-wrapper {
+  width: 100%;
+  height: 350px;
+  position: absolute;
+  top: 145px;
+}
+
+.skeleton {
+  width: 97%;
+  height: 350px;
+  padding: 30px 20px;
+  background-color: #fff;
+  border-radius: 12px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+
+  @include media-breakpoint-down(md) {
+    top: 255px;
+    width: 100%;
+    border-radius: 0;
+  }
+
+  &-header {
+    display: flex;
+    align-items: center;
+
+    &-image {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      background: #ccc;
+    }
+
+    &-name {
+      width: 30%;
+      height: 30px;
+      border-radius: 8px;
+      background: #ccc;
+      margin-left: 8px;
+    }
+  }
+
+  &-content {
+    height: 56%;
+    border-radius: 8px;
+    background: #ccc;
+    margin-top: 10px;
+    position: relative;
+    overflow: hidden;
+  }
+
+  &-line-one {
+    width: 80%;
+    height: 32px;
+    border-radius: 8px;
+    background-color: #ccc;
+    margin-top: 10px;
+  }
+
+  &-line-two {
+    width: 60%;
+    height: 32px;
+    border-radius: 8px;
+    background-color: #ccc;
+    margin-top: 10px;
+  }
+
+  &-header-image:before,
+  &-content:before {
+    content: '';
+    height: 100%;
+    width: 100%;
+    // border-radius: 100rem;
+    animation: slide 0.4s infinite;
+    position: absolute;
+    top: 0;
+    left: -100%;
+    background: linear-gradient(45deg, rgba(229, 229, 229, 0), rgba(255, 255, 255, 0.6), rgba(229, 229, 229, 0));
+    animation: shimmer 2s linear infinite;
+
+    @keyframes shimmer {
+      100% {
+        left: 100%;
       }
     }
   }
