Add loading on the Category page and update the Contact page

--- a/src/pages/Contact/Contact.module.scss
+++ b/src/pages/Contact/Contact.module.scss
@@ -2,7 +2,7 @@
 @import 'bootstrap/scss/variables';
 @import 'bootstrap/scss/mixins';
 
-.category {
+.contact {
   padding: 20px 40px;
   width: 100%;
   @include media-breakpoint-down(lg) {
