--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -112,9 +112,22 @@ img {
   background-color: rgba(0, 0, 0, 0.65);
   transition: opacity 0.5s;
   z-index: 9999;
-  
+
   &--show {
     visibility: visible;
     opacity: 0.4;
+  }
+}
+
+.modal-loading {
+  position: fixed;
+  inset: 0;
+  z-index: 999999;
+  background-color: rgba(0, 0, 0, 0.2);
+
+  &__content {
+    position: fixed;
+    inset: 50%;
+    z-index: 999999;
   }
 }
