--- a/src/pages/Orders/Order.module.scss
+++ b/src/pages/Orders/Order.module.scss
@@ -462,10 +462,11 @@
   height: 350px;
   position: absolute;
   top: 145px;
+  margin-top: 20px !important;
 }
 
 .skeleton {
-  width: 97%;
+  width: 100%;
   height: 350px;
   padding: 30px 20px;
   background-color: #fff;
